fix(travelheader): fixed wrong spacing between from and to labels

--- a/packages/travel/src/TravelHeader.scss
+++ b/packages/travel/src/TravelHeader.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   font-weight: $font-weights-heading;
+  line-height: 1.5;
   .eds-contrast & {
     color: $colors-brand-white;
   }
